# danny-checksum

./: .gitignore  deploy.sh  lifecycle.md  pyproject.toml  sins.md
.checksum/: checksum.yaml
.checksum/inputs/openapi/: integral-data-analytics.yaml
src/danny_checksum/: agent.py  cli.py  github_client.py
src/danny_checksum/business_logic/agentic/: onboarding_agent.py  test_generator_agent.py
src/danny_checksum/business_logic/classical/backend/: app.py  background_tasks.py  server.py  web_server.py
src/danny_checksum/business_logic/classical/backend/pollers/: git_poller.py  slack_poller.py
src/danny_checksum/connectors/chat_programs/: slack_client.py
src/danny_checksum/connectors/database/: customer_channel_dao.py  deployment_dao.py  engine.py  models.py  monitored_channel_dao.py  onboarding_dao.py  repo_dao.py  slack_dao.py  slack_thread_dao.py
src/danny_checksum/connectors/source_control/: github_client.py
src/danny_checksum/db_migrations/: env.py
src/danny_checksum/db_migrations/versions/: 0af4ef948dc4_create_deployments_table.py  7551f5352046_create_onboarding_sessions_table.py  a1b2c3d4e5f6_create_monitored_slack_channels_table.py  ae9ce0173a64_create_customer_repos_table.py  b2c3d4e5f6a7_rename_monitored_to_customer_slack_channels.py  c50f421f4461_create_slack_channels_table.py  cac0e65b6965_create_slack_threads_table.py
